--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,29 +1,79 @@
-<h2>Sign up</h2>
+<h3 class="mx-5">新規会員登録</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="d-flex justify-content-center">
+    <table>
+      <tbody>
+        <tr>
+          <td>名前</td>
+          <td>
+            <%= f.label :last_name, "(姓)" %>
+            <%= f.text_field :last_name, autofocus: true %>
+          </td>
+          <td>
+            <%= f.label :first_name, "(名)" %>
+            <%= f.text_field :first_name, autofocus: true %>
+          </td>
+        </tr>
+        <tr>
+          <td>フリガナ</td>
+          <td>
+            <%= f.label :last_name_kana, "(セイ)" %>
+            <%= f.text_field :last_name_kana, autofocus: true %>
+          </td>
+          <td>
+            <%= f.label :first_name_kana, "(メイ)" %>
+            <%= f.text_field :first_name_kana, autofocus: true %>
+          </td>
+        </tr>
+        <tr>
+          <td>メールアドレス</td>
+          <td>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </td>
+        </tr>
+        <tr>
+          <td>郵便番号（ハイフンなし）</td>
+          <td>
+            <%= f.text_field :postal_code, autofocus: true %>
+          </td>
+        </tr>
+        <tr>
+          <td>住所</td>
+          <td>
+            <%= f.text_field :address, autofocus: true %>
+          </td>
+        </tr>
+        <tr>
+          <td>電話番号（ハイフンなし）</td>
+          <td>
+            <%= f.telephone_field :telephone_number, autofocus: true %>
+          </td>
+        </tr>
+        <tr>
+          <td>パスワード(6文字以上)</td>
+          <td>
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </td>
+        </tr>
+        <tr>
+          <td>パスワード(確認用)</td>
+          <td>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><button type="submit" class="btn btn-success">新規登録</button></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 <% end %>
 
-<%= render "customers/shared/links" %>
+<h3 class="mx-5">既に登録済みの方</h3>
+<div class="mx-5"><%= link_to "こちら", customer_session_path %>からログインしてください</div>
+
+<!--<%#= render "customers/shared/links" %>-->
