--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,47 +1,53 @@
-<h4 class="mx-5">会員情報編集</h4>
+<div class="container">
+  <div class="row">
+    <h4 class="mx-5 col-xs-7">ショッピングカート</h4>
+    <div lass="col-xs-5 row justify-content-end mx-5">
+      <%= button_to "カートを空にする", destroy_all_cart_items_path, method: :delete, class: "btn btn-danger"%>
+    </div>
+  </div>
+</div>
 
-<div class="d-flex justify-content-center">
-  <%= form_with model: @customer, url: customers_path, method: :put, local:true do |f| %>
-  <table>
+<table class="table-bordered mx-auto" style="width: 60%;">
+  <thead>
+    <th>商品名</th>
+    <th>単価(税込)</th>
+    <th>数量</th>
+    <th>小計</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <% total = 0 %>
+    <% @cart_items.each do |cart_item| %>
+    <tr>
+      <td><%= attachment_image_tag cart_item.item, :image, :fill, 40, 40 %><%= cart_item.item.name %></td>
+      <td><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
+      <% total += cart_item.item.with_tax_price * cart_item.amount %>
+      <%= form_with model:cart_item, local:true do |f| %>
+      <td><%= f.select :amount, *[1..10] %><button type="submit" class="btn btn-success mx-3">変更</button></td>
+      <% end %>
+      <td><%= cart_item.subtotal.to_s(:delimited) %></td>
+      <td><%= button_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<div class="d-flex mx-auto cart_item" style="width: 60%;">
+  <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
+  <table class="table-bordered float-end">
     <tbody>
       <tr>
-        <td>氏名</td>
-        <td>
-           <%= f.text_field :last_name, autofocus: true %>
-           <%= f.text_field :first_name, autofocus: true %>
-        </td>
-      </tr>
-      <tr>
-        <td>フリガナ</td>
-        <td>
-          <%= f.text_field :last_name_kana, autofocus: true %>
-          <%= f.text_field :first_name_kana, autofocus: true %>
-        </td>
-      </tr>
-      <tr>
-        <td>郵便番号</td>
-        <td><%= f.text_field :postal_code, autofocus: true %></td>
-      </tr>
-      <tr>
-        <td>住所</td>
-        <td><%= f.text_field :address, autofocus: true %></td>
-      </tr>
-      <tr>
-        <td>電話番号</td>
-        <td><%= f.telephone_field :telephone_number, autofocus: true %></td>
-      </tr>
-      <tr>
-        <td>メールアドレス</td>
-        <td><%= f.email_field :email, autofocus: true %></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>
-          <button type="submit" class="btn btn-success">編集内容を変更を保存</button>
-          <%= link_to "退会する", unsubscribe_customers_path, class: "btn btn-danger mx-5" %>
-        </td>
+        <td>合計金額</td>
+        <td><%= total.to_s(:delimited) %></td>
       </tr>
     </tbody>
   </table>
+</div>
+
+<div class="text-center">
+  <% if total == 0 %>
+    <%= link_to "情報入力に進む", cart_items_path, class: "btn btn-success" %>
+  <% else %>
+    <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
   <% end %>
 </div>
