--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,32 +1,39 @@
-<div class="row">
-	<div class="col-xs-12">
-		<h3><strong>注文履歴一覧</strong></h3>
-		<table class="table table-bordered table-condensed">
-		<tr>
-			<th>注文日</th>
-			<th class="col-xs-3">配送日</th>
-			<th class="col-xs-2">注文商品</th>
-			<th class="col-xs-1">支払料金</th>
-			<th class="col-xs-2">ステータス</th>
-			<th class="col-xs-2">注文詳細</th>
-		</tr>
-		<% @orders.each do |order|%>
-		<tr>
-			<td class="col-xs-3"><%= order.created_at.strftime('%Y/%m/%d') %></td>
-			<td class="col-xs-2"><%= order.postal_code %>
-				<%= order.address %>
-				<%= order.name %>
-			</td>
-			<td class="col-xs-1">
-				<% order.order_details.each do |order_detail| %>
-				<%= order_detail.item.name %><br>
-			<% end %>
-			</td>
-			<td class="col-xs-2"><%= order.total_payment.to_s(:delimited, delimiter: ',') %></td>
-			<td class="col-xs-2"><%= order.order_status %></td>
-			<td><%= link_to "表示する", public_order_path(order), class: "btn btn-primary" %></td>
-		</tr>
-		<% end %>
-	</table>
-	</div>
-</div>
+<h4 class="mx-5">注文履歴一覧</h4>
+  <div class="d-flex justify-content-center">
+    <table class="table-bordered">
+      <thead>
+        <tr>
+          <td>注文日</td>
+          <td>配送先</td>
+          <td>注文商品</td>
+          <td>支払金額</td>
+          <td>ステータス</td>
+          <td>注文詳細</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+        <tr>
+          <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+          <td>
+            〒<%= order.postal_code %><br>
+            <%= order.address %><br>
+            <%= order.name %>
+          </td>
+          <td>
+          <% order.order_details.each do |order_detail| %>
+          <%= order_detail.item.name %><br>
+          <% end %>
+          </td>
+          <td><%= order.total_payment.to_s.gsub(/(\d)(?=(\d{3})+(?!\d))/, '\1,') %>円</td>
+          <td><%= order.status_i18n %></td>
+          <td>
+            <%= link_to order_path(order.id) do %>
+              <button class="btn btn-primary" >表示する</button>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
