--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,42 +1,47 @@
-<div class="row">
-    <div class="col-xs-12">
-      <h3><strong>登録情報編集</strong></h3>
-      <%= form_with model:@customer, url:customers_path, local: true do |f| %>
-          <div>
-            <div class="col-xs-12">
-              <%= f.label :"氏名", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.text_field :last_name, class: "last_name col-sm-3 form-control-static name", style: "margin: 10px;" %>
-              <%= f.text_field :first_name, class: "first_name col-sm-3 form-control-static name", style: "margin: 10px;" %>
-            </div>
-            <div class="col-xs-12">
-              <%= f.label :"フリガナ", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.text_field :last_name_kana, class: "last_name_kana col-sm-3 form-control-static name", style: "margin: 10px;" %>
-              <%= f.text_field :first_name_kana, class: "first_name_kana col-sm-3 form-control-static name", style: "margin: 10px;" %>
-            </div>
-            <div class="col-xs-12">
-              <%= f.label :"メールアドレス", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-sm-6 form-control-static", style: "margin: 10px;" %>
-            </div>
-            <div class="col-xs-12">
-              <%= f.label :"郵便番号", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.text_field :postal_code, class: "col-sm-2 form-control-static", style: "margin: 10px;" %>
-            </div>
-            <div class="col-xs-12">
-              <%= f.label :"住所", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.text_field :address, class: "col-sm-8 form-control-static", style: "margin: 10px;" %>
-            </div>
-            <div class="col-xs-12">
-              <%= f.label :"電話番号(ハイフンなし)", class: "col-sm-3 control-label", style: "margin: 10px;" %>
-              <%= f.text_field :phone_number, class: "col-sm-2 form-control-static", style: "margin: 10px;" %>
-            </div>
-        </div>
+<h4 class="mx-5">会員情報編集</h4>
 
-        <div class="actions col-xs-10 col-xs-offset-2">
-        <p>
-          <%= f.submit "編集内容を保存する", class: "btn btn-primary col-sm-3", style: "margin: 10px;" %>
-          <%= link_to " 退会する", unsubscribe_path, class: "glyphicon glyphicon-tint btn btn-danger col-sm-3", style: "margin: 10px;" %>
-        </p>
-        </div>
-      <% end %>
-    </div>
+<div class="d-flex justify-content-center">
+  <%= form_with model: @customer, url: customers_path, method: :put, local:true do |f| %>
+  <table>
+    <tbody>
+      <tr>
+        <td>氏名</td>
+        <td>
+           <%= f.text_field :last_name, autofocus: true %>
+           <%= f.text_field :first_name, autofocus: true %>
+        </td>
+      </tr>
+      <tr>
+        <td>フリガナ</td>
+        <td>
+          <%= f.text_field :last_name_kana, autofocus: true %>
+          <%= f.text_field :first_name_kana, autofocus: true %>
+        </td>
+      </tr>
+      <tr>
+        <td>郵便番号</td>
+        <td><%= f.text_field :postal_code, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>住所</td>
+        <td><%= f.text_field :address, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>電話番号</td>
+        <td><%= f.telephone_field :telephone_number, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td>メールアドレス</td>
+        <td><%= f.email_field :email, autofocus: true %></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <button type="submit" class="btn btn-success">編集内容を変更を保存</button>
+          <%= link_to "退会する", unsubscribe_customers_path, class: "btn btn-danger mx-5" %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <% end %>
 </div>
